working restore for mongo